welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:28: error: '(' expected but identifier found.
  for compteur <- 1 to 4){
      ^PictureMono2:68: error: illegal start of simple expression
} 
^